--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -87,7 +87,7 @@ Whether you will work locally or in a cloud environment, the first step for all 
            </TabItem>
          </OperatingSystemTabs>
 
-1. [Install pip](https://pip.pypa.io/en/stable/installation/) if you don't use a Python environment. Pip is a Python package manager that you use to install Qiskit and other Python packages. Use `pip list` to see what is in your virtual environment. If you use a Python environment, it's already installed in the environment.
+1. [Install pip](https://pip.pypa.io/en/stable/installation/) if you don't use a Python environment. Pip is a Python package manager that you use to install Qiskit and other Python packages. Use `pip list` to see what is in your virtual environment. If you use a Python environment, pip is already installed in the environment.
 
 1. Install the Qiskit SDK. If you plan to run jobs on quantum hardware, also install Qiskit Runtime.
 
@@ -131,7 +131,7 @@ Whether you will work locally or in a cloud environment, the first step for all 
 If you are planning to work locally and use simulators built into Qiskit, then your installation is done. If you want to run jobs on IBM Quantum systems, next [select an access channel](setup-channel) and finish your setup.
 
 <Admonition type="note" title="Stay current with the latest versions">
-    Periodically check the [Qiskit release notes](../api/qiskit/release-notes) and the [Qiskit Runtime release notes](../api/qiskit-ibm-runtime/release-notes) to see new releases, then run `pip install --upgrade <package-name>` when a new version is released. We recommend frequently updating your requirements for `qiskit` and `qiskit-ibm-runtime` by, for example, changing the versions in `requirements.txt` to the latest versions.
+    Periodically check the [Qiskit release notes](../api/qiskit/release-notes) and the [Qiskit Runtime release notes](../api/qiskit-ibm-runtime/release-notes) to see new releases, then run `pip install --upgrade <package-name>` to upgrade to thew new version. We recommend frequently updating your requirements for `qiskit` and `qiskit-ibm-runtime` by, for example, changing the versions in `requirements.txt` to the latest versions.
 </Admonition>
 
 ## Troubleshooting
