--- a/docs/open-source/qiskit-sdk-version-strategy.mdx
+++ b/docs/open-source/qiskit-sdk-version-strategy.mdx
@@ -1,6 +1,6 @@
 ---
 title: Qiskit SDK version strategy
-description: TODO - filler text so that the SEO check doesn't complain!
+description: Find information on the Qiskit SDK versioning strategy, release schedule, upgrade strategy, pre-releases, post-releases, and how contributors can mark deprecations.
 ---
 
 # Qiskit SDK version strategy
