--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -11,7 +11,7 @@ Today, Qiskit is the most popular quantum framework, thanks to its vibrant commu
 The Qiskit community is a dynamic and welcoming group of developers, scientists, and enthusiasts collaborating to advance software, research, education, and business through quantum computing.
 By making quantum computing open and accessible, we accelerate innovation and discover new applications for this transformative technology.
 
-As quantum technology evolves, contributions from the open-source Qiskit Ecosystem projects and developers are crucial in shaping its future.
+As quantum technology evolves, contributions from the open-source [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) projects and developers are crucial in shaping its future.
 The development of a dense ecosystem is vital not only for extending Qiskit's capabilities but also for spreading involvement and engagement across various sectors.
 By joining the Qiskit community, you can participate in the development of quantum technologies.
 Whether you are a seasoned quantum programmer or just beginning your quantum journey, Qiskit provides the support and inspiration needed to push boundaries.
