--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -16,4 +16,4 @@ The development of a dense ecosystem is vital not only for extending Qiskit's ca
 
 By joining the Qiskit community, you can participate in the development of quantum technologies.
 Whether you are a seasoned quantum programmer or just beginning your quantum journey, Qiskit provides the support and inspiration needed to push boundaries.
-We welcome all kinds of contributions, from code in PRs to community support on Slack, ensuring everyone can play a role in advancing quantum technology.
+We welcome all kinds of contributions, from code in PRs to community support on [Slack](https://docs.quantum.ibm.com/support#qiskit), ensuring everyone can play a role in advancing quantum technology.
