--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -5,7 +5,7 @@ description: Qiskit open-source introduction
 
 # Open source
 
-Since 2016, IBM Quantum has harnessed the power of community-driven innovation by making quantum computing resources accessible to everyone via the cloud.
+Since 2016, IBM Quantum&trade; has harnessed the power of community-driven innovation by making quantum computing resources accessible to everyone via the cloud.
 This groundbreaking initiative includes open-sourcing key parts of the quantum software stack and introducing Qiskit, a versatile quantum computing framework.
 Today, Qiskit is the most popular quantum framework, thanks to its vibrant community.
 The Qiskit community is a dynamic and welcoming group of developers, scientists, and enthusiasts collaborating to advance software, research, education, and business through quantum computing.
