--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -9,7 +9,7 @@ Since 2016, IBM Quantum&trade; has harnessed the power of community-driven innov
 This groundbreaking initiative includes open-sourcing key parts of the quantum software stack and introducing Qiskit, a versatile quantum computing framework.
 Today, Qiskit is the most popular quantum framework, thanks to its vibrant community.
 The Qiskit community is a dynamic and welcoming group of developers, scientists, and enthusiasts collaborating to advance software, research, education, and business through quantum computing.
-By making quantum computing open and accessible, we accelerate innovation and discover new applications for this transformative technology.
+By making this transformative technology open and accessible, we accelerate innovation and discover new applications.
 
 As quantum technology evolves, contributions from the open-source [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) projects and developers are crucial in shaping its future.
 The development of a dense ecosystem is vital not only for extending Qiskit's capabilities but also for spreading involvement and engagement across various sectors.
