--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Open source
-description: Qiskit open-source introduction
+description: Learn how to get involved with the Qiskit open-source community to shape the future of quantum computing.
 ---
 
 # Open source
