Fix notebook issues

--- a/docs/guides/transpiler-plugins.ipynb
+++ b/docs/guides/transpiler-plugins.ipynb
@@ -122,7 +122,7 @@
    "id": "5497ad2a-92aa-4461-8182-89472848e214",
    "metadata": {},
    "source": [
-    "### List available high-level sythesis plugins\n",
+    "### List available high-level synthesis plugins\n",
     "\n",
     "Use the [high_level_synthesis_plugin_names](/api/qiskit/qiskit.transpiler.passes.synthesis.plugin.high_level_synthesis_plugin_names) function, passing the name of the type of \"high-level object\" to be synthesized. The name corresponds to the [`name`](/api/qiskit/qiskit.circuit.Operation#name) attribute of the [Operation](/api/qiskit/qiskit.circuit.Operation) class representing the type of object being synthesized."
    ]
