--- a/docs/guides/configure-error-mitigation.mdx
+++ b/docs/guides/configure-error-mitigation.mdx
@@ -360,10 +360,10 @@ sampler = Sampler(backend, options=options)
 <span id="advanced-error"></span>
 ## Custom error settings (V2 primitives)
 
-With the V2 primitives, you can turn on and off individual error mitigation and suppression methods, including dynamical decoupling, gate and measurement twirling, measurement error mitigation, and ZNE. See [Error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) for an explanation of each.
+With the V2 primitives, you can turn on and off individual error mitigation and suppression methods, including dynamical decoupling, gate and measurement twirling, measurement error mitigation, PEC, and ZNE. See [Error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) for an explanation of each.
 
 <Admonition type = "note" title = "Notes">
-- Not all options are available for both primitives.   See the [API reference](/api/qiskit-ibm-runtime/options) for the list of available options.
+- Not all options are available for both primitives.   See the [available options](runtime-options-overview#options-table) table for the list of available options.
 - Dynamical decoupling is not supported when the input circuits are dynamic.
 </Admonition>
 
