--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -303,7 +303,7 @@
     "<Admonition type=\"tip\" title=\"Recommendation\">\n",
     "    - [Write a custom transpiler pass](custom-transpiler-pass).\n",
     "    - [Create a pass manager for dynamical decoupling](dynamical-decoupling-pass-manager).\n",
-    "    - To learn how to use the `transpile` function, start with the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.\n",
+    "    - To learn more about the `generate_preset_passmanager` function, see the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.\n",
     "    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.\n",
     "    - See the [Transpile API documentation.](https://docs.quantum-computing.ibm.com/api/qiskit/transpiler)\n",
     "</Admonition>"
