--- a/docs/guides/transpile.mdx
+++ b/docs/guides/transpile.mdx
@@ -62,7 +62,7 @@ For a simpler, but less customizable, "out-of-the-box" way to use the transpiler
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - To learn how to use the `transpile` function, start with the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.
+    - To learn how to use the `generate_preset_passmanager` function, start with the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.
     - Continue learning about transpilation with the [Transpiler stages](transpiler-stages) topic.
     - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.
     - Try an end-to-end example that uses transpiled circuits in the [Variational quantum eigensolver (VQE)](https://learning.quantum.ibm.com/tutorial/variational-quantum-eigensolver) tutorial.
