Fix typos in text

--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -422,7 +422,7 @@
    "source": [
     "## Scale to large numbers of qubits\n",
     "\n",
-    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by creating and analyzing a 100-qubit GHZ state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
+    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by creating and analyzing a 100-qubit GHZ state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_i Z_0 \\rangle $ for each qubit.\n",
     "\n",
     "### Step 1. Map the problem\n",
     "\n",
@@ -621,7 +621,7 @@
     "# plotting graph\n",
     "plt.scatter(data, values, marker='o', label='100-qubit GHZ state')\n",
     "plt.xlabel('Distance between qubits $i$')\n",
-    "plt.ylabel(r'$\\langle Z_0 Z_i \\rangle / \\langle Z_0 Z_1 \\rangle $')\n",
+    "plt.ylabel(r'$\\langle Z_i Z_0 \\rangle / \\langle Z_1 Z_0 \\rangle $')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
