--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "This example contains two parts. You will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the second section ([Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits)), you will scale the simple program up to utility level.  You can also follow along with the Hello World episode of the Coding with Qiskit 1.0 video series.\n",
     "\n",
-    "<YoutubeThumbnailLink\n",
+    "<ImageLink\n",
     "  title=\"Coding with Qiskit 1.x, Episode 3: Hello world\"\n",
     "  alt=\"Video thumbnail: Dr. Derek Wang stands against a pink background.\"\n",
     "  href=\"https://youtu.be/93-zLTppFZw\"\n",
-    "  imageSrc=\"/images/guides/hello-world/youtube-thumbnail.png\"\n",
+    "  src=\"/images/guides/hello-world/youtube-thumbnail.png\"\n",
     "/>\n",
     "\n",
     "<Admonition title=\"Note\" type=\"note\">\n",
