--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -6,11 +6,11 @@ description: Install the Qiskit SDK and Qiskit Runtime on various operating syst
 <span id="qiskit-install"></span>
 # Install Qiskit
 
-<YoutubeThumbnailLink
+<ImageLink
   title="Coding with Qiskit 1.x, Episode 2: How to install Qiskit"
   alt="Video thumbnail: Dr. Derek Wang stands against a pink background."
   href="https://youtu.be/dZWz4Gs_BuI"
-  imageSrc="/images/guides/install-qiskit/youtube-thumbnail.png"
+  src="/images/guides/install-qiskit/youtube-thumbnail.png"
 />
 
 Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real system, your next step is to choose one of two channels in order to access IBM Quantum&trade; systems: IBM Quantum Platform or IBM Cloud&reg;.
