--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -279,7 +279,7 @@ probabilities, except they might include negative values, which can occur when u
 ## How to use Qiskit primitives
 
 The `qiskit.primitives` module enables the development of primitive-style quantum programs and was specifically
-designed to simplify switching between different types of quantum computers. The module provides three separate classes
+designed to simplify switching between different types of quantum compute resources. The module provides three separate classes
 for each primitive type:
 
 1. `StatevectorSampler` and `StatevectorEstimator`
