Apply suggestions from code review
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>

--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -292,7 +292,7 @@ These are abstract base classes that define a common interface for implementing 
 
 3. `BackendSampler` and `BackendEstimator`
 
-If a provider does not support primitives natively, you can use these classes to “wrap” any quantum computer into a primitive. Users can write primitive-style code for providers that don’t yet have a primitives-based interface. These classes can be used just like the regular Sampler and Estimator, except they should be initialized with an additional `backend` argument for selecting which quantum computer to run on.
+If a provider does not support primitives natively, you can use these classes to “wrap” any quantum computing resource into a primitive. Users can write primitive-style code for providers that don’t yet have a primitives-based interface. These classes can be used just like the regular Sampler and Estimator, except they should be initialized with an additional `backend` argument for selecting which quantum computer to run on.
 
 The Qiskit Runtime primitives provide a more sophisticated implementation (for example, by including error mitigation) as a cloud-based service.
 
