Spellcheck code blocks

--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "# Transpile against custom backends\n",
     "\n",
+    "{/* cspell:ignore LOCC */}",
     "One of the more powerful features of Qiskit is the ability to support unique device configurations.  Qiskit is built to be agnostic to the provider of the quantum hardware you use, and providers can configure the `BackendV2` object to their own unique device properties.  This topic demonstrates how to configure your own backend and transpile quantum circuits against them.\n",
     "\n",
     "You can create unique `BackendV2` objects with different geometries or basis gates and transpile your circuits with those configurations in mind.  The example below covers a backend with a disjoint qubit lattice, whose basis gates are different along the edges from within the bulk."
