--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -626,9 +626,9 @@
     }
    ],
    "source": [
-    "gaus = pulse.library.Gaussian(num_samples, amp, sigma,\n",
-    "                              name=\"Parametric Gaus\")\n",
-    "gaus.draw()"
+    "gaussian = pulse.library.Gaussian(num_samples, amp, sigma,\n",
+    "                              name=\"Parametric Gaussian\")\n",
+    "gaussian.draw()"
    ]
   },
   {
@@ -668,8 +668,8 @@
     "times = np.arange(num_samples)\n",
     "gaussian_samples = np.exp(-1/2 *((times - num_samples / 2) ** 2 / sigma**2))\n",
     "\n",
-    "gaus = library.Waveform(gaussian_samples, name=\"WF Gaus\")\n",
-    "gaus.draw()"
+    "gaussian = library.Waveform(gaussian_samples, name=\"WF Gaussian\")\n",
+    "gaussian.draw()"
    ]
   },
   {
@@ -703,7 +703,7 @@
    ],
    "source": [
     "with pulse.build() as schedule:\n",
-    "    pulse.play(gaus, channel)\n",
+    "    pulse.play(gaussian, channel)\n",
     "schedule.draw()"
    ]
   },
