--- a/docs/guides/qiskit-serverless.mdx
+++ b/docs/guides/qiskit-serverless.mdx
@@ -3,6 +3,8 @@ title: Run workloads remotely with Qiskit Serverless
 description: How to run quantum computing workloads remotely using Qiskit Serverless on IBM Quantum.
 ---
 
+{/* cspell:ignore IBMQPU */}
+
 # Run workloads remotely with Qiskit Serverless
 
 Premium users can build, deploy, and run their workloads remotely on classical compute made available through the IBM Quantum&trade; Platform.
