--- a/docs/guides/qiskit-transpiler-service.mdx
+++ b/docs/guides/qiskit-transpiler-service.mdx
@@ -1,8 +1,10 @@
 ---
 title: Transpile circuits remotely with the Qiskit transpiler service
 description: What is the Qiskit transpiler service and how to use it
-
 ---
+
+{/* cspell:ignore Eprint */}
+
 # Transpile circuits remotely with the Qiskit transpiler service
 
 The Qiskit transpiler service provides transpilation capabilities on the cloud. In addition to the local Qiskit transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum&trade; cloud resources and AI-powered transpiler passes.
