--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -65,15 +65,19 @@ The context manager automatically opens and closes the session.
 <Tabs>
   <TabItem value="PrimV2" label="V2 primitives">
 ``` python
+from qiskit_ibm_runtime import Session, Samplerv2 as Sampler, Estimatorv2 as Estimator
+
 backend = service.least_busy(operational=True, simulator=False)
 with Session(service=service, backend=backend):
-  estimatorv2 = EstimatorV2()
-  samplerv2 = SamplerV2()
+  estimator = Estimator()
+  sampler = Sampler()
 ```
   </TabItem>
 
   <TabItem value="PrimV1" label="V1 primitives">
 ``` python
+from qiskit_ibm_runtime import Session, Sampler, Estimator
+
 backend = service.least_busy(operational=True, simulator=False)
 with Session(service=service, backend=backend):
   estimator = Estimator()
