--- a/docs/guides/primitives-examples.mdx
+++ b/docs/guides/primitives-examples.mdx
@@ -245,7 +245,7 @@ job = estimator.run([(chsh_isa_circuit, reshaped_ops, individual_phases)])
 pub_result = job.result()[0]
 print(f">>> Expectation values: {pub_result.data.evs}")
 print(f">>> Standard errors: {pub_result.data.stds}")
-print(f">>> Metadta: {pub_result.metadata}")
+print(f">>> Metadata: {pub_result.metadata}")
 ```
 <details>
 <summary>
@@ -284,7 +284,7 @@ Output
   0.01502082 0.01328527 0.01091851 0.00844617 0.00733946 0.00854042
   0.01067919 0.01339231 0.01508038 0.01562477 0.01505948 0.01328527
   0.01120762 0.00835042 0.00760564]]
->>> Metadta: {'target_precision': 0.015625}
+>>> Metadata: {'target_precision': 0.015625}
 ```
 </details>
 
