--- a/docs/guides/specify-runtime-options.mdx
+++ b/docs/guides/specify-runtime-options.mdx
@@ -64,7 +64,7 @@ options =  EstimatorOptions(resilience_level=2, resilience={"zne_mitigation": Tr
 
 # or...
 options =  EstimatorOptions()
-estimator.options.resilience_level = 2
+options.resilience_level = 2
 options.resilience.zne_mitigation = True
 options.resilience.zne.noise_factors = [1, 3, 5]
 
